--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  width: 900px;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+}
+.App > div {
+  flex: 1;
 }
 
-.App-link {
-  color: #61dafb;
+:root {
+  --warrior-bg-color: #fc3;
+  --magician-bg-color: #39c;
+  --archer-bg-color: #6C3;
+  --thief-bg-color: #639;
+  --pirate-bg-color: #999;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.warrior {
+  background-color: var(--warrior-bg-color);
+}
+.magician {
+  background-color: var(--magician-bg-color);
+}
+.archer {
+  background-color: var(--archer-bg-color);
+}
+.thief {
+  background-color: var(--thief-bg-color);
+}
+.pirate {
+  background-color: var(--pirate-bg-color);
 }
