--- a/src/component/Charactor.css
+++ b/src/component/Charactor.css
@@ -6,9 +6,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 1px 3px 2px rgba(0, 0, 0, 0.3);
+    box-shadow: 1px 3px 4px rgba(0, 0, 0, 0.3);
+    transition: all 0.5s;
 }
 
+.char-box:hover {
+    position: relative;
+    top: -5px;
+    cursor: pointer;
+}
 
 
 .char-box-image {
@@ -17,7 +23,7 @@
     margin-top: 9px;
     margin-bottom: 8px;
     object-fit: fill;
-    background-color: white;
+    background-color: rgba(222, 222, 222, 0.9);
     border-radius: 25px;
     display: flex;
     flex-direction: column;
@@ -32,16 +38,17 @@
 }
 
 .char-name {
-    width: 200px;
+    width: 144px;
     height: 35px;
     display: flex;
+    border-radius: 10px;
     justify-content: center;
     align-items: center;
-    color: #000;
+    color: #f0f0f0;
     font-weight: 700;
     text-shadow:
-        -1px -1px 0 #fff,
-        1px -1px 0 #fff,
-        -1px 1px 0 #fff,
-        1px 1px 0 #fff;  
+        -1px -1px 0 #000,
+        1px -1px 0 #000,
+        -1px 1px 0 #000,
+        1px 1px 0 #000;  
 }
